@@ -17,6 +17,8 @@ new:
   => http://www.vdr-portal.de/board17-developer/board21-vdr-plugins/p1289764-epgsearch-f%C3%BCr-vdr-2-3-x/#post1289764
 - Commit menu_category_recsdone.diff by tomas & louis @vdr-portal.de
   http://www.vdr-portal.de/board1-news/board2-vdr-news/p1271995-skindesigner-1-0-0-neuer-default-skin-estuary4vdr/#post1271995
+- Commit 0001-revert-seperate-status-thread.diff by TomJoad@vdr-portal.de
+  http://www.vdr-portal.de/board17-developer/board21-vdr-plugins/p1291452-epgsearch-f%C3%BCr-vdr-2-3-x/#post1291452
 
 2013-03-xx; Version 1.0.1 - maintenance release
 new:
